deploy/k8s/istio/authorization-policy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: restrict-cross-namespace
  namespace: intelgraph
spec:
  action: DENY
  rules:
    - from:
        - source:
            notPrincipals:
              - 'cluster.local/ns/intelgraph/*'
